sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:23: error: '<-' expected but ',' found.
  for (cpt -> 0,taille - 1 - N){
               ^BasicPancake:30: error: illegal start of simple expression
} 
^